# transfer-webrtc-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  error.rs  main.rs  peer_id.rs
src/rtc/: mod.rs  peer.rs
src/signaling/: messages.rs  mod.rs  peerjs.rs
src/transfer/: crypto.rs  mod.rs  protocol.rs  receiver.rs  sender.rs
