[package]
name = "sendfile-webrtc-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebRTC
webrtc = "0.11"

# WebSocket client for signaling
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Progress display
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
base64 = "0.22"
bytes = "1"
